# aps-ui

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  de.aps_ui.cli.appdata.xml  de.aps_ui.cli.yml
.github/docker/: Dockerfile
.github/workflows/: flatpak.yml
cmake/: cpr_patch.patch  gcc_analyze.cmake
src/: CMakeLists.txt  main.cpp
src/backend/: CMakeLists.txt
src/backend/db/: DbHelper.cpp  DbHelper.hpp  Departure.cpp  Departure.hpp
src/backend/deviceStatus/: CMakeLists.txt
src/backend/gitlab/: CMakeLists.txt  GitLabHelper.cpp  GitLabHelper.hpp
src/backend/lightning/: CMakeLists.txt  LightningHelper.cpp  LightningHelper.hpp
src/backend/storage/: CMakeLists.txt  Serializer.cpp  Settings.cpp  Settings.hpp
src/backend/systemUtils/: CMakeLists.txt  SystemUtils.cpp
src/backend/teams/: CMakeLists.txt  Connection.cpp  Connection.hpp  Token.cpp  Token.hpp
src/backend/weather/: CMakeLists.txt  Forecast.cpp  Forecast.hpp  OpenWeatherHelper.cpp  OpenWeatherHelper.hpp
src/backend/ws/: CMakeLists.txt  Websocket.cpp  Websocket.hpp
src/logger/: CMakeLists.txt  Logger.cpp
src/ui/: CMakeLists.txt  UiContext.cpp
src/ui/resources/: theme.css
src/ui/utils/: CMakeLists.txt
src/ui/widgets/: CMakeLists.txt  DbWidget.cpp  DeviceStatusWidget.cpp  DeviceStatusWidget.hpp  LightningMap.cpp  LightningMap.hpp  LightningWidget.hpp  SettingsWidget.cpp  SettingsWidget.hpp  WeatherWidget.cpp  WeatherWidget.hpp
src/ui/widgets/gitlab/: CMakeLists.txt  PlotWidget.cpp  PlotWidget.hpp
src/ui/widgets/teams/: ActivityWidget.cpp  ActivityWidget.hpp  CMakeLists.txt  CallWidget.cpp  CallWidget.hpp  TeamsWidget.cpp  TeamsWidget.hpp
src/ui/windows/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp
